# aporture

./: .gitignore  Cargo.toml  README.md  icons.toml  justfile
.github/workflows/: rust.yml
aporture_cli/: Cargo.toml
aporture_cli/src/: args.rs  commands.rs  contacts.rs  main.rs  passphrase.rs  progress.rs
aporture_gtk/: Cargo.toml  README.md  styles.css
aporture_gtk/src/: app.rs  main.rs  utils.rs  workers.rs
aporture_gtk/src/components/: aporture_dialog.rs  confirmation.rs  contacts.rs  contacts_dialog.rs  dialog.rs  error.rs  file_chooser.rs  mod.rs  preferences.rs  receive.rs  recieve.rs  send.rs  toaster.rs
aporture_gtk/src/components/dialog/: aporture.rs  confirmation.rs  contacts.rs  error.rs  mod.rs  peer.rs
aporture_gtk/src/components/modal/: aporture.rs  contacts.rs  mod.rs  preferences.rs
aporture_gtk/src/components/modal/aporture/: channel.rs  error.rs  mod.rs  protocol.rs
aporture_gtk/src/pages/: contacts.rs  mod.rs  receive.rs  send.rs
aporture_lib/: Cargo.toml
aporture_lib/src/: crypto.rs  lib.rs  net.rs  pairing.rs  protocol.rs  transfer.rs  upnp.rs
aporture_lib/src/crypto/: cert.rs  cipher.rs  error.rs  hasher.rs  mod.rs
aporture_lib/src/fs/: config.rs  contacts.rs  mod.rs
aporture_lib/src/io/: mod.rs  parser.rs
aporture_lib/src/io/fs/: config.rs  contacts.rs  mod.rs  salt.rs
aporture_lib/src/io/net/: cipher.rs  message.rs  mod.rs  peer.rs  plain.rs  quic.rs
aporture_lib/src/net/: crypto.rs  error.rs  mod.rs
aporture_lib/src/pairing/: error.rs  mod.rs  upnp.rs
aporture_lib/src/parser/: error.rs  mod.rs
aporture_lib/src/passphrase/: mod.rs  wordlist.rs
aporture_lib/src/protocol/: mod.rs  parser.rs
aporture_lib/src/transfer/: channel.rs  connection.rs  deflate.rs  error.rs  file.rs  mod.rs  path.rs  peer.rs
aporture_lib/src/upnp/: error.rs  mod.rs
aporture_server/: Cargo.toml
aporture_server/src/: connection.rs  main.rs  net.rs  protocol.rs
flatpak/: .gitignore  dev.msambartolomeo.aporture.flatpak.json  sources.json
