[package]
name = "aporture_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tabled = { version = "0.17.0", default-features = false, features = ["std"] }
anyhow = "1.0.93"
rpassword = "7.3.1"
colored = "2.1.0"
indicatif = "0.17.9"

# NOTE: Shared dependencies
aporture = { workspace = true, features = ["full"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "aporture"
path = "src/main.rs"
