[package]
name = "aporture_cli"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
tabled = { version = "0.18.0", default-features = false, features = ["std"] }
anyhow = "1.0.96"
rpassword = "7.3.1"
colored = "3.0.0"
indicatif = "0.17.11"

# NOTE: Shared dependencies
aporture = { workspace = true, features = ["full"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "aporture"
path = "src/main.rs"
