[package]
name = "aporture_gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_45"] }
relm4-components = "0.8.1"
relm4-icons = "0.8.2"
# NOTE: Shared dependencies
aporture = { workspace = true, features = ["full"] }
log = { workspace = true }
env_logger = { workspace = true }
