[package]
name = "aporture_gtk"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
relm4-components = "0.9.1"
relm4-icons = "0.9.0"
# NOTE: Shared dependencies
aporture = { workspace = true, features = ["full"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
