[package]
name = "aporture_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dev-dependencies]
paste = "1.0.15"

[dependencies]
blake3 = { version = "1.5.4", optional = true }
argon2 = { version = "0.5.3", optional = true, default-features = false, features = [
    "alloc",
] }
tar = { version = "0.4.42", optional = true }
flate2 = { version = "1.0.34", optional = true }
aes-gcm-siv = { version = "0.11.1", optional = true }
spake2 = { version = "0.4.0", optional = true }
directories = { version = "5.0.1", optional = true }
local-ip-address = { version = "0.6.3", optional = true }
igd = { version = "0.15.1", package = "igd-next", optional = true, features = [
    "aio_tokio",
] }
chrono = { version = "0.4.38", optional = true, features = ["serde"] }
tempfile = { version = "3.13.0", optional = true }
walkdir = { version = "2.5.0", optional = true }

# NOTE: Protocol dependencies
serde = { version = "1.0.210", features = ["derive"] }
serde_bencode = "0.2.4"
serde_with = "3.11.0"
serde_repr = "0.1.19"
generic-array = "1.1.0"
rand = "0.8.5"
bytes = "1.7.2"

# NOTE: Shared dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = ["full"]
full = [
    "blake3",
    "argon2",
    "aes-gcm-siv",
    "spake2",
    "directories",
    "local-ip-address",
    "igd",
    "chrono",
    "flate2",
    "tar",
    "tempfile",
    "walkdir",
]
