[package]
name = "aporture_lib"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dev-dependencies]
paste = "1.0.15"

[dependencies]
blake3 = { version = "1.6.0", optional = true }
argon2 = { version = "0.5.3", optional = true, default-features = false, features = [
    "alloc",
] }
tar = { version = "0.4.43", optional = true }
flate2 = { version = "1.0.35", optional = true }
aes-gcm-siv = { version = "0.11.1", optional = true }
spake2 = { version = "0.4.0", optional = true }
directories = { version = "6.0.0", optional = true }
local-ip-address = { version = "0.6.3", optional = true }
igd = { version = "0.16.0", package = "igd-next", optional = true, features = [
    "aio_tokio",
] }
chrono = { version = "0.4.39", optional = true, features = ["serde"] }
tempfile = { version = "3.17.1", optional = true }
walkdir = { version = "2.5.0", optional = true }
rcgen = { version = "0.13.2", optional = true }
quinn = { version = "0.11.6", optional = true }
stunclient = { version = "0.4.1", optional = true }
typed-path = { version = "0.10.0", optional = true }

# NOTE: Protocol dependencies
serde = { version = "1.0.218", features = ["derive"] }
serde_bencode = "0.2.4"
serde_with = "3.12.0"
serde_repr = "0.1.19"
generic-array = "=1.2.0"
rand = "0.9.0"
bytes = "1.10.0"


# NOTE: Shared dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }


[features]
default = ["full"]
full = [
    "blake3",
    "argon2",
    "aes-gcm-siv",
    "spake2",
    "directories",
    "local-ip-address",
    "igd",
    "chrono",
    "flate2",
    "tar",
    "tempfile",
    "walkdir",
    "rcgen",
    "quinn",
    "stunclient",
    "typed-path",
]
typed-path = ["dep:typed-path"]
