[package]
name = "aporture_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
# NOTE: Shared dependencies
aporture = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
