[package]
name = "aporture_server"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# NOTE: Shared dependencies
aporture = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
